; ModuleID = '/home/carl/AnghaBench/git/extr_line-log.c_process_ranges_ordinary_commit.c'
source_filename = "/home/carl/AnghaBench/git/extr_line-log.c_process_ranges_ordinary_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i32 }
%struct.commit = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.commit* }
%struct.line_log_data = type { i32 }
%struct.diff_queue_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rev_info*, %struct.commit*, %struct.line_log_data*)* @process_ranges_ordinary_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @process_ranges_ordinary_commit(%struct.rev_info* %0, %struct.commit* %1, %struct.line_log_data* %2) #0 {
  %4 = alloca %struct.rev_info*, align 8
  %5 = alloca %struct.commit*, align 8
  %6 = alloca %struct.line_log_data*, align 8
  %7 = alloca %struct.commit*, align 8
  %8 = alloca %struct.diff_queue_struct, align 4
  %9 = alloca %struct.line_log_data*, align 8
  %10 = alloca i32, align 4
  store %struct.rev_info* %0, %struct.rev_info** %4, align 8
  store %struct.commit* %1, %struct.commit** %5, align 8
  store %struct.line_log_data* %2, %struct.line_log_data** %6, align 8
  store %struct.commit* null, %struct.commit** %7, align 8
  %11 = load %struct.commit*, %struct.commit** %5, align 8
  %12 = getelementptr inbounds %struct.commit, %struct.commit* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = icmp ne %struct.TYPE_2__* %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %3
  %16 = load %struct.commit*, %struct.commit** %5, align 8
  %17 = getelementptr inbounds %struct.commit, %struct.commit* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load %struct.commit*, %struct.commit** %19, align 8
  store %struct.commit* %20, %struct.commit** %7, align 8
  br label %21

21:                                               ; preds = %15, %3
  %22 = load %struct.line_log_data*, %struct.line_log_data** %6, align 8
  %23 = load %struct.rev_info*, %struct.rev_info** %4, align 8
  %24 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %23, i32 0, i32 0
  %25 = load %struct.commit*, %struct.commit** %5, align 8
  %26 = load %struct.commit*, %struct.commit** %7, align 8
  %27 = call i32 @queue_diffs(%struct.line_log_data* %22, i32* %24, %struct.diff_queue_struct* %8, %struct.commit* %25, %struct.commit* %26)
  %28 = load %struct.rev_info*, %struct.rev_info** %4, align 8
  %29 = load %struct.line_log_data*, %struct.line_log_data** %6, align 8
  %30 = call i32 @process_all_files(%struct.line_log_data** %9, %struct.rev_info* %28, %struct.diff_queue_struct* %8, %struct.line_log_data* %29)
  store i32 %30, i32* %10, align 4
  %31 = load %struct.commit*, %struct.commit** %7, align 8
  %32 = icmp ne %struct.commit* %31, null
  br i1 %32, label %33, label %38

33:                                               ; preds = %21
  %34 = load %struct.rev_info*, %struct.rev_info** %4, align 8
  %35 = load %struct.commit*, %struct.commit** %7, align 8
  %36 = load %struct.line_log_data*, %struct.line_log_data** %9, align 8
  %37 = call i32 @add_line_range(%struct.rev_info* %34, %struct.commit* %35, %struct.line_log_data* %36)
  br label %38

38:                                               ; preds = %33, %21
  %39 = load %struct.line_log_data*, %struct.line_log_data** %9, align 8
  %40 = call i32 @free_line_log_data(%struct.line_log_data* %39)
  %41 = load i32, i32* %10, align 4
  ret i32 %41
}

declare dso_local i32 @queue_diffs(%struct.line_log_data*, i32*, %struct.diff_queue_struct*, %struct.commit*, %struct.commit*) #1

declare dso_local i32 @process_all_files(%struct.line_log_data**, %struct.rev_info*, %struct.diff_queue_struct*, %struct.line_log_data*) #1

declare dso_local i32 @add_line_range(%struct.rev_info*, %struct.commit*, %struct.line_log_data*) #1

declare dso_local i32 @free_line_log_data(%struct.line_log_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
